--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ bibliography: references.bib
 
 This short book has been created as a resource for librarians at the University of Southampton. It aims to aggregate the most pertinent information available about how to create effective webpages for library users.
 
-As library webpages consist largely of text and links, text based pages are the focus of this book.
+As library webpages consist largely of text and links, text-based pages are the focus of this book.
 
 The scope does extend to images, but not to video or other media. However, most of the considerations that apply to images, apply to videos and other media.
 
