--- a/how-to-use-imagery-and-visuals.qmd
+++ b/how-to-use-imagery-and-visuals.qmd
@@ -1,14 +1,14 @@
 # Using imagery and visuals {#sec-using-imagery-and-visuals}
 
 ::: {.callout-important .unnumbered title="Summary" appearance="simple" icon="false"}
-There are lots of trade-offs when using imagery. Imagery can help create ambiance, impart information or orientate the user. But images should not be used to provide information alone. Images slow down page loading and increase scrolling and scanning time, especially on mobile devices.
+There is always a trade-off when using imagery. Imagery can help create ambiance, impart information or orientate the user. But images slow down page loading and increase scrolling and scanning time, especially on mobile devices. Images should not be used to provide information alone.
 :::
 
 ## How to use images {#sec-how-to-use-images}
 
-Users are primarily visiting Library webpages are to access information or services. Therefore images and visuals should support these aims either by informing or orientating the user.
+Users are primarily visiting Library webpages to access information or services. Therefore images and visuals should support these aims either by informing or orientating the user.
 
-Be wary of using images that don't do either or these things, and never rely on imagery alone to provide information. This will exclude users who cannot see or access the image. Likewise images that contain text are difficult for some users to read, so should be avoided if possible (See @sec-designing-for-accessibility).
+Be wary of using images that don't do either of these things, and never rely on imagery alone to provide information. This will exclude users who cannot see or access the image. Likewise images that contain text are difficult for some users to read, so should be avoided if possible (See @sec-designing-for-accessibility).
 
 Images can also make scanning more difficult and increase scrolling time, especially on mobile devices. Remember that users are just as likely to be accessing from a mobile device than a desktop or laptop computer (@sec-mobile-devices-now-account-for-50-of-webpage-views-in-the-uk).
 
@@ -24,7 +24,7 @@ Therefore use images carefully and consider the trade-off in either including or
 
 -   Photographs: if you need to show a lifelike representation of something such as a piece of equipment or room that can be booked.
 
--   Illustrations: useful for conveying complex process or information that is difficult to describe.
+-   Illustrations: useful for conveying complex processes or information that is difficult to describe.
 
 -   Icons and logos: used to represent menus, actions or objects and can orientate the user on the page as they are easy to scan. However, icons don't have universal meaning and are open to misinterpretation. If you use icons, ensure they are consistent across pages.
 
@@ -32,7 +32,7 @@ Therefore use images carefully and consider the trade-off in either including or
 
 ### Decorative images {#sec-decorative-images}
 
-Decorative imagery are images which are used to create ambiance and should be marked as decorative without alt text so that they are ignored by screen readers.
+Decorative imagery are images which are used to create ambiance and should be marked as decorative so that they are ignored by screen readers.
 
 ## Making imagery accessible {#sec-making-imagery-accessible}
 
@@ -49,6 +49,8 @@ Alternative text, or alt text is read aloud by screen readers or displayed when 
 
 *Generally, aim for no more than 2 sentences of alt text.* [GOV.UK Design System: Images](https://design-system.service.gov.uk/styles/images/)
 :::
+
+You will need to consult the documentation for the tool you are using to create your webpage for the instructions on how to add alt text to your image.
 
 ## Further reading {#sec-further-reading}
 
