--- a/postscript.qmd
+++ b/postscript.qmd
@@ -1,6 +1,6 @@
 # Postscript {#sec-postscript .unnumbered}
 
-Whilst putting these materials together I encountered a [Tim Harford article in the Financial Times about Subtraction Neglect Bias](https://www.ft.com/content/eb616ad3-e680-4161-9e20-53c4607cb609) (Link only accessible to FT subscribers) .
+Whilst putting these materials together I encountered a [Tim Harford article in the Financial Times about Subtraction Neglect Bias](https://www.ft.com/content/eb616ad3-e680-4161-9e20-53c4607cb609) (Link only accessible to FT subscribers.) .
 
 Subtraction Neglect Bias is the cognitive bias humans have towards problem solving of adding instead of subtracting.
 
@@ -10,9 +10,9 @@ Obviously, adding something to an existing situation is often the right way to s
 
 I assume there is something cognitively painful about subtraction as compared with a cognitive reward of addition that biases us towards addition. A form of [loss aversion](https://en.wikipedia.org/wiki/Loss_aversion)?
 
-Anyhow, if you are reading this you may be wondering what that's got to do with webpage design? Everything, I'd say. But it also has a lot to do with lots of other things we do at work or at home so I thought I mention it here as a general issue.
+Anyhow, if you are reading this you may be wondering what that's got to do with webpage design? Everything, I'd say. But it also has a lot to do with lots of other things we do at work or at home so I thought I'd mention it here as a general issue.
 
-For example: PowerPoint slide design. Many presentations have too many slides and/or slides too with much information on each one. Which I assume is a result of successive additions aimed at improving the presentation, when in fact it has the opposite effect. The result is slides that are difficult to read or understand, especially when the presenter is also talking. Most, if not all, presentations and slides would be strengthened by having less in them.
+For example: PowerPoint slide design. Many presentations have too many slides and/or slide(s) too with much information on each one. Which I assume is a result of successive additions aimed at improving the presentation, when in fact it has the opposite effect. The result is slides that are difficult to read or understand, especially when the presenter is also talking. Most, if not all, presentations and slides would be strengthened by having less in them.
 
 So when you next are creating a webpage, writing, scheduling meetings, cooking, planning your weekend etc. consider removing words, slides, sections, ingredients, commitments or activities and see if it improves things, rather than adding more.
 
