--- a/how-people-read-webpages.qmd
+++ b/how-people-read-webpages.qmd
@@ -91,9 +91,9 @@ There is no WCAG standard for font size or font face, but for reference the GDS 
 
 Cascading Style Sheets (CSS) specify the presentation of styling of webpages and have several ways of expressing units of length. This [W3 consortium tutorial page on CSS units of length](https://www.w3schools.com/cssref/css_units.php) has full details and examples.
 
-Points (pt) is an absolute length (for font size) originating in typography, such that a 12pt font is around 4.2 mm in size. (Try measuring the letters for a12pt font your screen in Word or Outlook.)
+Points (pt) is an absolute length (for font size) originating in typography, such that a 12pt font is around 4.2 mm in size. (Try measuring the letters for a 12pt font your screen in Word or Outlook.)
 
-Pixels (px) are absolute numbers, but a pixel is defined by the viewing device, such that 1px might be one dot on a display with few dots, but represented by multiple dots on a display comprising on many dots. So whilst 16px should be around 12pt or 4.2 mm on most screens, the screen resolution (number of dots) will determine the actual size.
+Pixels (px) are absolute numbers, but a pixel is defined by the viewing device, such that 1px might be one dot on a display with few dots, but represented by multiple dots on a display comprising of many dots. So whilst 16px should be around 12pt or 4.2 mm on most screens, the screen resolution (number of dots) will determine the actual size.
 
 Relative to font-size of the root element (rem) means the scale the font relative to a defined absolute font size in px - the root element. So if we define a font size of 16px, 1 rem is 16px and 2 rem is 32px etc. And 2rem would be around 24pt or 8.4 mm on most screens.
 
