--- a/postscript.qmd
+++ b/postscript.qmd
@@ -14,7 +14,7 @@ Anyhow, if you are reading this you may be wondering what that's got to do with 
 
 For example: PowerPoint slide design. Many presentations have too many slides and/or slide(s) too with much information on each one. Which I assume is a result of successive additions aimed at improving the presentation, when in fact it has the opposite effect. The result is slides that are difficult to read or understand, especially when the presenter is also talking. Most, if not all, presentations and slides would be strengthened by having less in them.
 
-So when you next are creating a webpage, writing, scheduling meetings, cooking, planning your weekend etc. consider removing words, slides, sections, ingredients, commitments or activities and see if it improves things, rather than adding more.
+So when you next create a webpage, are writing, scheduling meetings, cooking, planning your weekend etc. consider removing words, slides, sections, ingredients, commitments or activities and see if it improves things, rather than adding more.
 
 ::: {.callout-tip title="Antoine de Saint-Exupéry, 1939" icon="true" appearance="simple"}
 *"...perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away..."*
