revise summary on wtri

--- a/what-to-read-instead.qmd
+++ b/what-to-read-instead.qmd
@@ -1,7 +1,7 @@
 # What to read instead {#sec-what-to-read-instead}
 
 ::: {.callout-important .unnumbered title="Summary" appearance="simple" icon="false"}
-If you don't have the time or inclination to read the rest of this book, on this page are links to the source material and notes about a couple of things I didn't include.
+On this page are links to the source material and notes about a couple of things I didn't include when creating this book. You may prefer to read them instead.
 :::
 
 Given the enormous economic value of the world wide web and attracting users to one's site, there are considerable research efforts into user experience (UX) design in both the commercial and public sectors.
