--- a/how-people-access-webpages.qmd
+++ b/how-people-access-webpages.qmd
@@ -42,7 +42,9 @@ There is of course lots more detail on the [NN/g: Optimizing for Context in the 
 
 ## Designing for accessibility {#sec-designing-for-accessibility}
 
-It's impossible to anticipate every accessibility need, so an important consideration: **Is there a clear method by which users can contact you with accessibility issues?**
+It's impossible to anticipate every accessibility need, so an important consideration:
+
+**Is there a clear method by which users can contact you with accessibility issues?**
 
 For example, an email address or messaging service.
 
