--- a/example-web-pages.qmd
+++ b/example-web-pages.qmd
@@ -1,5 +1,100 @@
 ## Example webpages
 
-Here are links to
+::: {.callout-important .unnumbered title="Summary" appearance="simple" icon="false"}
+**The links here are not to real web pages**
 
-[UoS example page](https://ab604.github.io/webpage-design/main/uos-example-page.html)
+They've been created to illustrate the ideas outlined in the previous chapters and to enable you to compare the effects of different designs on user experience.
+:::
+
+## Structure Examples
+
+This section demonstrates how webpage structure alters user experience.
+
+### Baseline
+
+This [Baseline Welcome Page](https://ab604.github.io/webpage-design/main/uos-example-page.html) follows the principles discussed in previous chapters.
+
+It's not intended to be perfect either in form or content, but to provide a baseline for comparison to the variations below.
+
+### Variation 1
+
+[Welcome Page Variation 1](https://ab604.github.io/webpage-design/wot/uos-wot.html)
+
+### Variation 2
+
+[Welcome Page Variation 2](https://ab604.github.io/webpage-design/more-than-text/uos-mtt.html)
+
+## Appearance Examples
+
+### Variation 3
+
+[Welcome Page Variation 3](https://ab604.github.io/webpage-design/sevillana/uos-sevillana.html)
+
+### Variation 4
+
+[Welcome Page Variation 4](https://ab604.github.io/webpage-design/tiny-font/uos-tiny.html)
+
+## Language Examples
+
+I asked [Claude Sonnet]() to describe Rule 59 of the Highway Code. This was the response:
+
+> Rule 59 of the Highway Code provides guidance on proper clothing and protective gear for cyclists. It states the following:
+>
+> You should avoid wearing clothes that could get tangled in the bicycle's chain or wheels, or that might obscure your lights while cycling. This could include loose or flowing garments, items with dangling straps or cords, or any clothing that is overly baggy or ill-fitting.
+>
+> The rule recommends wearing light-colored or fluorescent clothing during the day and in poor light conditions, as this can help other road users see you more easily. Reflective clothing and accessories, such as reflective belts, arm or ankle bands, are also advised for increased visibility at night or in low-light situations.
+>
+> Additionally, Rule 59 emphasizes the importance of wearing a cycle helmet that conforms to current regulations and safety standards. The helmet should be the correct size and properly fastened to ensure a secure fit. Research suggests that a correctly fitted helmet can significantly reduce the risk of sustaining a head injury in certain circumstances or accidents while cycling.
+>
+> In summary, Rule 59 advises cyclists to wear appropriate clothing that does not pose an entanglement hazard, choose visible and reflective garments for increased conspicuity, and always wear a properly fitted and approved cycle helmet to protect against head injuries.
+
+Now compare these two versions of Rule 59 based on the actual text and consider what would improve them:
+
+```{=html}
+<a data-bs-toggle="collapse" data-bs-target="#collapseV1" aria-expanded="false" aria-controls="collapseV1">
+<strong>Show variation 1 of Rule 59</strong>
+</a> <br>
+<div class="collapse" id="collapseV1">
+  <div class="card card-body">
+  <p>
+Vestiary accoutrements. One ought to eschew sartorial assemblages that may become entrapped within the continuous chain or rotational apparatus, or occlude the luminescent signaling devices during the act of cycling. Garments exhibiting a high degree of luminance or fluorescence can augment the perceptibility to other vehicular operators in diurnal and suboptimal illumination conditions, while attire or accessories (such as belts, arm bands, or ankle adornments) imbued with retroreflective properties can amplify one's conspicuity in conditions of nocturnal obscurity.
+</p>
+<p>
+It is advisable to don a cranial protective apparatus conforming to current regulatory mandates, exhibiting an appropriate dimensional correspondence, and securely affixed. Empirical evidence suggests that a properly fitted cranial shield can mitigate the risk of sustaining cephalic trauma in certain contingencies.</p>
+  </div>
+</div>  
+```
+
+```{=html}
+<a data-bs-toggle="collapse" data-bs-target="#collapseV2" aria-expanded="false" aria-controls="collapseV1">
+<strong>Show variation 2 of Rule 59</strong>
+</a> <br>
+<div class="collapse" id="collapseV2">
+  <div class="card card-body">
+<p>Clothing, you should avoid wearing garments that may become entangled in the bicycle chain or wheels, or that may obstruct your lights while you are cycling, thus posing a potential safety hazard. Clothing items that are light-colored or fluorescent in nature can significantly enhance your visibility to other road users under daylight conditions and in situations of poor lighting, whereas reflective clothing and accessories, such as reflective belts, arm bands, or ankle bands, can substantially increase your conspicuity and visibility in the dark, thereby reducing the risk of accidents or collisions.
+</p>
+<p>
+Furthermore, it is highly recommended that you wear a cycle helmet that conforms to the current regulations and safety standards, ensuring that it is of the correct size and securely fastened to your head, as extensive research and evidence strongly suggest that a correctly fitted and properly worn cycle helmet can significantly reduce your risk of sustaining a head injury in the event of certain circumstances or accidents that may occur while cycling.</p>
+  </div>
+</div>  
+```
+
+Below is the actual text from the Highway Code. What makes this good writing?
+
+```{=html}
+<a data-bs-toggle="collapse" data-bs-target="#collapseV3" aria-expanded="false" aria-controls="collapseV3">
+<strong>Show Highway Code Rule 59</strong>
+</a> <br>
+<div class="collapse" id="collapseV3">
+  <div class="card card-body">
+<p><strong>Clothing.</strong> You should avoid clothes that may get tangled in the chain, or in a wheel or may obscure your lights when you are cycling.
+</p>
+<p>
+Light-coloured or fluorescent clothing can help other road users to see you in daylight and poor light, while reflective clothing and/or accessories (belt, arm or ankle bands) can increase your visibility in the dark.
+</p>
+<p>
+You should wear a cycle helmet that conforms to current regulations, is the correct size and securely fastened. Evidence suggests that a correctly fitted helmet will reduce your risk of sustaining a head injury in certain circumstances.
+</p>
+  </div>
+</div>  
+```
